<resources>
    <string name="app_name">My App UD2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_noticia">Imagen de la noticia</string>
    <string name="btn_continue">Continue</string>
    <string name="tv_welcome">¡Bienvenido!\nVamos a ponernos al día.</string>
    <string name="edt_nombre">¿Cómo te llamas?</string>
    <string name="tv_categorias_te_gustan">¿Qué categoria de noticias te gusta más?</string>
    <string name="chbox_todas">Múestrame todas</string>
    <string name="chbox_deportes">Deportes</string>
    <string name="chbox_tecnologia">Tecnología</string>
    <string name="btn_news">Llevame al feed</string>
    <string name="tv_terminos">%s, puede que encuentres información sensible. Necesitamos que nos confirmes que eres mayor de edad</string>
    <string name="sch_edad">¿Eres mayor de edad?</string>
    <string name="menuGeneral">General</string>
    <string name="menuDeportes">Deportes</string>
    <string name="menuTech">Tecnología</string>
</resources>