<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_terms"
        style="@style/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/ptName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/ptName"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/edt_nombre"
        android:inputType="textEmailAddress"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <TextView
        android:id="@+id/tv_categorias_te_gustan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:text="@string/tv_categorias_te_gustan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ptName"
        app:layout_constraintStart_toStartOf="@+id/ptName"
        app:layout_constraintTop_toBottomOf="@+id/ptName" />

    <CheckBox
        android:id="@+id/chbox_deportes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chbox_deportes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chbox_todas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chbox_todas"
        app:layout_constraintTop_toBottomOf="@+id/chbox_todas"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chbox_todas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chbox_todas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_categorias_te_gustan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_categorias_te_gustan"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorias_te_gustan"
        app:layout_constraintVertical_bias="0.092" />

    <CheckBox
        android:id="@+id/chbox_tecnologia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chbox_tecnologia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chbox_deportes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chbox_deportes"
        app:layout_constraintTop_toBottomOf="@+id/chbox_deportes"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>